deploy/k8s/accounts-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    team: accounts
    tier: db
  name: accounts-db
spec:
  ports:
    - name: tcp
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: accounts-db
    application: bank-of-anthos
    environment: development
    team: accounts
    tier: db
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    team: accounts
    tier: db
  name: accounts-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-db
      application: bank-of-anthos
      environment: development
      team: accounts
      tier: db
  serviceName: accounts-db
  template:
    metadata:
      labels:
        app: accounts-db
        application: bank-of-anthos
        environment: development
        team: accounts
        tier: db
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: environment-config
            - configMapRef:
                name: accounts-db-config
            - secretRef:
                name: accounts-db-secret
            - configMapRef:
                name: demo-data-config
          image: bank-of-anthos/accounts-db:latest
          name: accounts-db
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 50m
              memory: 80Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
              subPath: postgres
      serviceAccountName: bank-of-anthos
      imagePullSecrets:
        - name: regcred
  volumeClaimTemplates:
    - metadata:
        name: postgresdb
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 500Mi
